<resources>
    <string name="app_name">Binary Bandits</string>
    <string name="start_scanning_text">Let\'s start scanning.</string>
    <string name="start_scanning_subtext">Scan a QR code below, or use the navigation bar to access more options.</string>
    <string name="scan_code_content_desc">Scan a QR code</string>

    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>

    <string name="username_placeholder_text">Username</string>
    <string name="score_label">Total Score:&#160;</string>
    <string name="total_qr_codes_scanned_label">QR Codes Scanned:&#160;</string>
    <string name="score_text">0</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="welcomeText">Welcome to QRHunter!</string>
    <string name="intro_text">Find. Collect. Compete</string>
    <string name="into_text2">Start your journey today!</string>
    <string name="username_edit">profile icon</string>
    <string name="login_image">login box</string>
    <string name="create_image">create box</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create</string>
    <string name="icon_of_profile">icon of profile</string>
    <string name="username">Username</string>
    <string name="or">Or</string>
    <string name="Create_an_account">Create an Account</string>
    <string name="ready_to_get_started">Ready to get started?</string>
    <string name="textBoxOne">textBoxOne</string>
    <string name="textBoxTwo">textBoxTwo</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_the_account_information_below_and_we_ll_be_scanning_in_no_time">Enter the account information below and we\'ll be scanning in no time.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="button">Button</string>
    <string name="image">image</string>
    <string name="search">Search</string>
    <string name="qr_code">QR Code</string>
    <string name="comment_placeholder">Comment</string>
    <string name="_1000">1000</string>

</resources>