<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageBox8"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="380dp"
        android:contentDescription="@string/username_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#333333" />

    <ImageView
        android:id="@+id/profileIcon2"
        android:layout_width="38dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="392dp"
        android:contentDescription="@string/icon_of_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        app:tint="#8A8A8E" />

    <Button
        android:id="@+id/createAccountBtnSignUp"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="536dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBox7"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="536dp"
        android:contentDescription="@string/create_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#FF426F" />

    <TextView
        android:id="@+id/createText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="548dp"
        android:text="@string/Create_an_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="322dp"
        android:layout_height="128dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/ready_to_get_started"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBox1"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/textBoxOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#333333" />

    <ImageView
        android:id="@+id/imageBox3"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="440dp"
        android:contentDescription="@string/textBoxTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#333333" />

    <EditText
        android:id="@+id/editFullNameSignUp"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="380dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#8A8A8E"
        android:textColorHint="#8A8A8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUsernameSignUp"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="320dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#8A8A8E"
        android:textColorHint="#8A8A8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPhoneSignUp"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="440dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#8A8A8E"
        android:textColorHint="#8A8A8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="71dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="204dp"
        android:text="@string/enter_the_account_information_below_and_we_ll_be_scanning_in_no_time"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="328dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        app:tint="#8A8A8E"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="448dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_call"
        app:tint="#8A8A8E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="632dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFB800"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickLogInBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_direct_btn"
        android:layout_width="62dp"
        android:layout_height="31dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="632dp"
        android:textColor="@color/yellow"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="632dp"
        android:text="@string/login"
        android:textColor="#FFB800"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="onClickLogInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>