<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="322dp"
        android:layout_height="128dp"
        android:layout_marginTop="96dp"
        android:text="@string/welcomeText"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="456dp"
        android:text="@string/intro_text"
        android:textColor="#FF426F"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="432dp"
        android:text="@string/into_text2"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/username_btn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="392dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="452dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="572dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBox1"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="392dp"
        android:contentDescription="@string/username_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#333333" />

    <ImageView
        android:id="@+id/imageBox2"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="452dp"
        android:contentDescription="@string/login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#FFB800" />

    <ImageView
        android:id="@+id/imageBox3"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="572dp"
        android:contentDescription="@string/create_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#FF426F" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="464dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="584dp"
        android:text="@string/Create_an_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="44dp"
        android:layout_height="26dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="404dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        app:tint="#8A8A8E"
        android:contentDescription="@string/icon_of_profile" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="392dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#8A8A8E"
        android:textColorHint="#8A8A8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="528dp"
        android:text="@string/or"
        android:textColor="#8A8A8E"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>