<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <TextView
        android:id="@+id/startText"
        android:layout_width="365dp"
        android:layout_height="132dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="37dp"
        android:text="Welcome to QR Bandits!"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro1"
        android:layout_width="411dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="37dp"
        android:text="@string/intro_text"
        android:textColor="#FF426F"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="411dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins"
        android:paddingHorizontal="37dp"
        android:text="@string/into_text2"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/big_rounded_button"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="572dp"
        android:background="@drawable/big_rounded_button"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/poppins"
        android:text="@string/Create_an_account"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBox1"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="392dp"
        android:contentDescription="@string/username_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#333333" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="37dp"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="404dp"
        android:contentDescription="@string/icon_of_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        app:tint="#8A8A8E" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="392dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#8A8A8E"
        android:textColorHint="#8A8A8E"
        app:layout_constraintBottom_toBottomOf="@+id/imageBox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="528dp"
        android:fontFamily="@font/poppins"
        android:text="@string/or"
        android:textColor="#8A8A8E"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>