<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:foregroundTint="#333333"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageBox"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/textBoxOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_rounded_button"
        app:tint="#FFFFFF" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="293dp"
        android:layout_height="47dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="2"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textColor="@color/background_black"
        app:layout_constraintEnd_toEndOf="@+id/imageBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search"
        app:tint="#757575" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#161616"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@color/bottom_nav_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/search_results_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player Search Results"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/search_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.72" />

    <ListView
        android:id="@+id/search_results"
        android:layout_width="367dp"
        android:layout_height="419dp"
        android:layout_marginTop="108dp"
        android:background="#333333"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBox" />

    <Button
        android:id="@+id/back_to_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/big_rounded_button"
        android:backgroundTint="@color/red"
        android:onClick="backToLeaderboard"
        android:text="Back to Leaderboard"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results" />

</androidx.constraintlayout.widget.ConstraintLayout>